wellesleynet/roles/k8s/files/keycloak.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  serviceName: "keycloak"
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - image: jboss/keycloak:10.0.2
        imagePullPolicy: Always
        name: keycloak
        ports:
        - containerPort: 8080
      - image: postgres:12.3-alpine
        imagePullPolicy: Always
        name: keycloak-postgres
        volumeMounts:
        - name: keycloak
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: keycloak
        persistentVolumeClaim:
          claimName: keycloak
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
  - name: keycloak
    port: 8080
    protocol: TCP
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
  - host: keycloak.kiski.co
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 8080
  tls:
  - hosts:
    - keycloak.kiski.co
    secretName: kiskico-wildcard
